cmake_minimum_required(VERSION 3.26)
project(Proj5)

set(CMAKE_CXX_STANDARD 17)

add_executable(Proj5
        proj5-BUAthlete.cpp
        proj5-BUAthlete.h
        proj5-BUAthleteList.cpp
        proj5-BUAthleteList.h
        proj5-NCAAAthlete.cpp
        proj5-NCAAAthlete.h
        proj5-main.cpp)
